crates/runtime/tests/ready_state/snapshots/integration__ready_state__test_ready_state_on_schema_resolved_federated_cayenne_acceleration.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str
---
+---------------+-----------------------------------------------------------------+
| plan_type     | plan                                                            |
+---------------+-----------------------------------------------------------------+
| logical_plan  | TableScan: federated_on_schema_resolved_cayenne projection=[id] |
| physical_plan | BytesProcessedExec                                              |
|               |   DataSourceExec: partitions=1, partition_sizes=[1]             |
|               |                                                                 |
+---------------+-----------------------------------------------------------------+
