crates/runtime/tests/ready_state/snapshots/integration__ready_state__test_ready_state_on_schema_resolved_native_arrow_acceleration.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str
---
+---------------+------------------------------------------------------------+
| plan_type     | plan                                                       |
+---------------+------------------------------------------------------------+
| logical_plan  | TableScan: native_on_schema_resolved_arrow projection=[id] |
| physical_plan | BytesProcessedExec                                         |
|               |   DataSourceExec: partitions=1, partition_sizes=[1]        |
|               |                                                            |
+---------------+------------------------------------------------------------+
