crates/runtime/tests/ready_state/snapshots/integration__ready_state__test_ready_state_on_schema_resolved_native_duckdb_acceleration_after_loading.snap
---
source: crates/runtime/tests/ready_state/mod.rs
expression: explain_str
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                            |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Federated                                                                                                                                                       |
|               |  Projection: native_on_schema_resolved_duckdb.id                                                                                                                |
|               |   TableScan: native_on_schema_resolved_duckdb projection=[id]                                                                                                   |
| physical_plan | SchemaCastScanExec                                                                                                                                              |
|               |   CooperativeExec                                                                                                                                               |
|               |     BytesProcessedExec                                                                                                                                          |
|               |       VirtualExecutionPlan name=duckdb compute_context=:memory: base_sql=SELECT "native_on_schema_resolved_duckdb"."id" FROM "native_on_schema_resolved_duckdb" |
|               |                                                                                                                                                                 |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------+
